--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-devstack",
   "version": "1.0.0",
   "description": "new devstack experiment",
+  "repository": "https://github.com/peter-popluhar/guru-devstack",
   "main": "index.js",
   "scripts": {
     "build": "gulp build"
@@ -11,7 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^6.4.1",
     "babel-polyfill": "^6.13.0",
-    "babelify": "^7.3.0",
+    "babelify": "^6.0.2",
     "bootstrap-sass": "^3.3.7",
     "browser-sync": "^2.16.0",
     "browserify": "^13.1.0",
